<?xml version="1.0" encoding="utf-8"?>
<org.fossify.phone.fragments.RecentsFragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recents_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyTextView
        android:id="@+id/recents_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:gravity="center"
        android:paddingStart="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin"
        android:text="@string/no_previous_calls"
        android:textSize="@dimen/bigger_text_size"
        android:textStyle="italic"
        android:visibility="gone" />

    <org.fossify.commons.views.MyTextView
        android:id="@+id/recents_placeholder_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recents_placeholder"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ripple_all_corners"
        android:gravity="center"
        android:padding="@dimen/activity_margin"
        android:text="@string/request_access"
        android:textSize="@dimen/bigger_text_size"
        android:visibility="gone" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/recents_filter_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recents_placeholder_2"
        android:paddingStart="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin"
        android:paddingTop="@dimen/normal_margin"
        android:paddingBottom="@dimen/normal_margin"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            app:checkedIconVisible="false"
            android:checked="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_incoming"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incoming"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_outgoing"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outgoing"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_rejected"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rejected"
            app:checkedIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_missed"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missed"
            app:checkedIconVisible="false" />
    </com.google.android.material.chip.ChipGroup>

    <org.fossify.commons.views.MyRecyclerView
        android:id="@+id/recents_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layoutAnimation="@anim/layout_animation"
        android:paddingBottom="@dimen/recyclerview_fab_padding"
        android:scrollbars="none"
        app:layoutManager="org.fossify.commons.views.MyLinearLayoutManager"
        android:layout_below="@id/recents_filter_group" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        app:trackCornerRadius="@dimen/small_margin" />
</org.fossify.phone.fragments.RecentsFragment>
